<resources>
    <string name="app_name">ToDoList</string>
    <string name="to_do_list">ToDo List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Not Registered? Register Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_login_here">Already Registered? Login here</string>
    <string name="username">UserName</string>
    <string name="select_photo">Select Photo</string>
    <string name="authentication_failed">Authentication Failed. Try Again.</string>
    <string name="logo">logo</string>
    <string name="close">CLOSE</string>
    <string name="add">ADD</string>
</resources>