<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/layout_style">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/teamworkingchecklistbackgroundfreepik">


     </ImageView>

        <EditText
            android:id="@+id/editTextUserName"
            style="@style/credentials_fields"
            android:drawableStart="@drawable/ic_action_person"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            style="@style/credentials_fields"
            android:drawableStart="@drawable/ic_action_email_address"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            style="@style/credentials_fields"
            android:drawableStart="@drawable/ic_action_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            />


        <Button
            android:id="@+id/signUpButton"
            style="@style/mainbutton_style"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/alreadyRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/already_registered_login_here"
            android:textColor="@color/copy"
            android:textSize="15sp"/>



    </LinearLayout>
    </ScrollView>
</layout>