<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        android:background="@color/colorAccent">

        <Button
            android:id="@+id/selectPhotoButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:text="@string/select_photo"
            android:textColor="@color/colorAccent"
            android:background="@drawable/rounded_select_image"
          />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:drawableStart="@drawable/ic_action_person"
            android:ems="10"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:drawableStart="@drawable/ic_action_email_address"
            android:ems="10"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:drawableStart="@drawable/ic_action_password"
            android:ems="10"
            android:layout_marginBottom="40dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
         />


        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:layout_marginBottom="40dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:background="@drawable/rounded_edittext" />

        <TextView
            android:id="@+id/alreadyRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered_login_here"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"/>



    </LinearLayout>
</layout>