<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">
    <data>
        <variable
            name="login_activity"
            type="com.example.mytodolist.LoginActivity" />
    </data>

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="50dp"
        android:background="@color/light_blue">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:contentDescription="logo"
            android:src="@drawable/todologo" />


        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:drawableStart="@drawable/ic_action_email_address"
            android:ems="10"
            android:layout_marginBottom="7dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:drawableStart="@drawable/ic_action_password"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"

            android:textSize="16sp"
            />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registerHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            />

    </LinearLayout>

</layout>